--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,28 +3,33 @@
 {% block content %}
     <div class="row">
         <h1>Entidades</h1>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Ação</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for entidade in entidades %}
-                <tr>
-                    <td>{{ entidade.id }}</td>
-                    <td>{{ entidade.nome }}</td>
-                    <td>{{ entidade.email }}</td>
-                    <td>
-                        <a class="btn btn-warning" href="{% url 'upd_entidade' entidade.pk %}">Editar</a>
-                        <a class="btn btn-danger" href="{% url 'del_entidade' entidade.pk %}">Deletar</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="container">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Ação</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for entidade in page_obj %}
+                        <tr>
+                            <td>{{ entidade.id }}</td>
+                            <td>{{ entidade.nome }}</td>
+                            <td>{{ entidade.email }}</td>
+                            <td>
+                                <a class="btn btn-warning" href="{% url 'upd_entidade' entidade.pk %}">Editar</a>
+                                <a class="btn btn-danger" href="{% url 'del_entidade' entidade.pk %}">Deletar</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            {% include 'paginacao.html' %}
+
+        </div>
     </div>
 {% endblock %}
