Final da primeira parte da manutençao de cadastros.

--- a/core/templates/entidade_del.html
+++ b/core/templates/entidade_del.html
@@ -7,7 +7,7 @@
     {% buttons %}
             <button type="submit" class="btn btn-danger">Confirmar</button>
             <button type="button" class="btn btn-warning">
-                <a href="{% url 'index' %}">Cancelar</a>
+                <a href="{% url 'entidades' %}">Cancelar</a>
             </button>
     {% endbuttons %}
     </form>
