--- a/core/templates/entidade_form.html
+++ b/core/templates/entidade_form.html
@@ -8,7 +8,7 @@
         {% buttons %}
             <button type="submit" class="btn btn-primary">Salvar</button>
             <button type="button" class="btn btn-warning">
-                <a href="{% url 'index' %}">Cancelar</a>
+                <a href="{% url 'entidades' %}">Cancelar</a>
             </button>
         {% endbuttons %}
     </form>
