--- a/core/templates/entidades.html
+++ b/core/templates/entidades.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {%  load humanize %}
 {% block content %}
+    <header class="masthead bg-primary text-white">
     <div class="row">
         <h3>Entidades</h3>
         <div class="container">
@@ -32,4 +33,5 @@
 
         </div>
     </div>
+    </header>
 {% endblock %}
