--- a/core/static/css/main.css
+++ b/core/static/css/main.css
@@ -2,8 +2,16 @@
     flex-direction: row;
 }
 
+.rowlist {
+    width: 100%;
+}
+
+.pesquisa {
+    padding: 25px !important;
+}
+
 .div-img {
-    padding: 0px !important;
+    padding: 10px !important;
 }
 .box1 {
     flex-direction: column;
@@ -13,3 +21,26 @@
     flex-direction: column;
 }
 
+.cover {
+    object-fit: cover;
+    float: left;
+    width: 100%;
+    height: 100%;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.my-float{
+	margin-top:22px;
+}
